added instagram section

--- a/index.html
+++ b/index.html
@@ -71,19 +71,35 @@
                 <img src="./Flower Asset/Group 59.png" alt="">
                 <h3 class="simple-text">24/7 Free Support.</h3>
             </div>
-         <!-- hot deal section -->
+            <!-- hot deal section -->
         </div>
         <div class="hot-deal">
             <div class="hot-text">
                 <h1 class="hot-heading">Hot Deal ! Sale Up To 25% <span class="off">Off</span></h1>
-                <p class="hot-peragraph">It is a long established fact that a reader will be distracted by the readable <br>
+                <p class="hot-peragraph">It is a long established fact that a reader will be distracted by the readable
+                    <br>
                     content of a page when looking at its layout.</p>
-                    <button class="header-btn btn">Sign Up</button>
+                <button class="header-btn btn">Sign Up</button>
             </div>
             <div class="hot-flower">
                 <img src="./Flower Asset/pngwing 8.png" alt="">
             </div>
         </div>
+        <div class="insta-heading">
+            <h1>
+                Instagram 
+            </h1>
+            <p class="insta-destription">
+                It is a long established fact that a reader will be distracted by the readable <br> content of a page when looking at its layout.
+            </p>
+            <div class="insta-pictures">
+                <div><img class="insta-img" src="./Flower Asset/Flower 01.png" alt=""></div>
+                <div><img class="insta-img" src="./Flower Asset/Rectangle 4.png" alt=""></div>
+                <div><img class="insta-img" src="./Flower Asset/Rectangle 5.png" alt=""></div>
+                <div><img class="insta-img" src="./Flower Asset/Rectangle 6.png" alt=""></div>
+            </div>
+        </div>
+       
 
     </main>
     <footer>
