letest deal section styles

--- a/index.html
+++ b/index.html
@@ -99,6 +99,22 @@
                 <div><img class="insta-img" src="./Flower Asset/Rectangle 6.png" alt=""></div>
             </div>
         </div>
+        <!-- letest deal section -->
+
+        <div class="deal-section">
+            <div class="deals-description">
+                <h1 class="heading">
+                    Get The Latest Deals
+                </h1>
+                <p class="heading-pg">
+                    $30 coupon for first shopping
+                </p>
+            </div>
+            <div class="deal-Subscribe">
+                <div>  <input email ="email" name="" id="" placeholder="Enter your email here" class="email-box" ></div>
+                <button class="header-btn dbtn">Subscribe</button>
+            </div>
+        </div>
        
 
     </main>
