--- a/index.html
+++ b/index.html
@@ -40,23 +40,38 @@
             </p>
         </div>
         <div class="feature-items">
-            <div class="flower1">
-                <img class="img-one" src="./Flower Asset/pngwing 6.png" alt="">
+            <div>
+                <div class="flower1">
+                    <img class="img-one" src="./Flower Asset/pngwing 6.png" alt="">
+                </div>
+                <h3 class="flower-text">
+                    Pink flower tree
+                </h3>
             </div>
-            <div class="flower2">
-                <img class="img-two" src="./Flower Asset/pngwing 5.png" alt="">
+            <div>
+                <div class="flower2">
+                    <img class="img-two" src="./Flower Asset/pngwing 5.png" alt="">
+
+                </div>
+                <h3 class="flower-text">
+                    Pink flower tree
+                </h3>
 
             </div>
-            <div class="flower3">
-                <img class="img-three" src="./Flower Asset/pngwing 7.png" alt="">
+
+            <div>
+                <div class="flower3">
+                    <img class="img-three" src="./Flower Asset/pngwing 7.png" alt="">
+                </div>
+                <h3 class="flower-text">
+                    Pink flower tree
+                </h3>
+
+
             </div>
 
         </div>
-        <div class="flowers-name">
-            <h3>pink flower tree</h3>
-            <h3>pink flower tree</h3>
-            <h3>pink flower tree</h3>
-        </div>
+    
         <!-- second featured section -->
         <div class="feature-two">
             <div>
@@ -78,7 +93,8 @@
                 <h1 class="hot-heading">Hot Deal ! Sale Up To 25% <span class="off">Off</span></h1>
                 <p class="hot-peragraph">It is a long established fact that a reader will be distracted by the readable
                     <br>
-                    content of a page when looking at its layout.</p>
+                    content of a page when looking at its layout.
+                </p>
                 <button class="header-btn btn">Sign Up</button>
             </div>
             <div class="hot-flower">
@@ -87,10 +103,11 @@
         </div>
         <div class="insta-heading">
             <h1>
-                Instagram 
+                Instagram
             </h1>
             <p class="insta-destription">
-                It is a long established fact that a reader will be distracted by the readable <br> content of a page when looking at its layout.
+                It is a long established fact that a reader will be distracted by the readable <br> content of a page
+                when looking at its layout.
             </p>
             <div class="insta-pictures">
                 <div><img class="insta-img" src="./Flower Asset/Flower 01.png" alt=""></div>
@@ -111,14 +128,21 @@
                 </p>
             </div>
             <div class="deal-Subscribe">
-                <div>  <input email ="email" name="" id="" placeholder="Enter your email here" class="email-box" ></div>
-                <button class="header-btn dbtn">Subscribe</button>
+                <div> <input email="email" name="" id="" placeholder="Enter your email here" class="email-box"></div>
+                <button class="header-btn dealbtn">Subscribe</button>
             </div>
         </div>
-       
+
 
     </main>
-    <footer>
+    <footer class="footer">
+        <div class="footer-text">
+            <h2 class="flower-shop-tag"><span>Flower</span>Shop</h2>
+            <h5 class="flower-shop-description">It is a long established fact that a reader will be distracted by the readable<br>content of a page when
+                looking at its layout.</h5>
+            <p class="copyright-tag">@2020-2023, FlowerShop.com. All rights reserved.</p>
+
+        </div>
 
     </footer>
 
