--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             </div>
 
         </div>
-    
+
         <!-- second featured section -->
         <div class="feature-two">
             <div>
@@ -138,7 +138,8 @@
     <footer class="footer">
         <div class="footer-text">
             <h2 class="flower-shop-tag"><span>Flower</span>Shop</h2>
-            <h5 class="flower-shop-description">It is a long established fact that a reader will be distracted by the readable<br>content of a page when
+            <h5 class="flower-shop-description">It is a long established fact that a reader will be distracted by the
+                readable<br>content of a page when
                 looking at its layout.</h5>
             <p class="copyright-tag">@2020-2023, FlowerShop.com. All rights reserved.</p>
 
